oss-nginx-migration/migration-output/gateway-test-app-nginx-alb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    alb.networking.azure.io/alb-id: /subscriptions/<sub-id>/resourceGroups/<rg>/providers/Microsoft.ServiceNetworking/trafficControllers/<agc-name>
  name: alb-gateway
  namespace: test-app-nginx
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
