oss-nginx-migration/migration-output/httproute-test-app-nginx-echo-ingress-all-hosts.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-ingress-all-hosts
  namespace: test-app-nginx
spec:
  parentRefs:
  - name: alb-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: echo-web
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: echo-api
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /api
